--- a/src/app/dialog/dialog/dialog.component.html
+++ b/src/app/dialog/dialog/dialog.component.html
@@ -1,17 +1,17 @@
 <h2 mat-dialog-title>Editar</h2>
-<form>
+<form [formGroup]="form">
     <mat-dialog-content class="mat-typography gap-5">
         <div class="flex gap-5">
             <div>
                 <mat-form-field appearance="fill">
                     <mat-label>Nome completo</mat-label>
-                    <input matInput placeholder="Placeholder">
+                    <input matInput placeholder="Placeholder" formControlName="nome_completo">
                 </mat-form-field>
             </div>
             <div>
                 <mat-form-field appearance="fill">
                     <mat-label>CPF</mat-label>
-                    <input matInput placeholder="Placeholder">
+                    <input matInput placeholder="Placeholder" formControlName="cpf">
                 </mat-form-field>
             </div>
         </div>
@@ -19,26 +19,28 @@
             <div>
                 <mat-form-field appearance="fill">
                     <mat-label>Endereço</mat-label>
-                    <input matInput placeholder="Placeholder">
+                    <input matInput placeholder="Placeholder" formControlName="endereco">
                 </mat-form-field>
             </div>
             <div>
-                <mat-form-field appearance="fill">
+                <mat-form-field>
                     <mat-label>Status</mat-label>
-                    <input matInput placeholder="Placeholder">
-                </mat-form-field>
+                    <select matNativeControl required formControlName="status">
+                      <option value="em_analise">Em Analise</option>
+                      <option value="aprovado">Aprovado</option>
+                      <option value="recusado">Recusado</option>
+                    </select>
+                  </mat-form-field>
             </div>
         </div>
         <div class="w-full">
             <mat-form-field appearance="fill">
                 <mat-label>Valor do emprestimo</mat-label>
-                <input matInput placeholder="Placeholder">
+                <input matInput placeholder="Placeholder"  formControlName="valor_emprestimo">
             </mat-form-field>
         </div>
     </mat-dialog-content>
     <div mat-dialog-actions >
-        <button mat-mini-fab color="accent" aria-label="Example" [mat-dialog-close]="true" cdkFocusInitial>
-            <mat-icon>plus_one</mat-icon>
-          </button>
+        <button mat-raised-button (click)="submit()">Enviar</button>
     </div>
 </form>
